test/driver/diag_col_origin.2.stderr
<source>:6:12: error: cannot add 'i32' to 'bool'
    6 |     5 + true;
      |     ~ ^ ~~~~
